# OpenCLMocker

./: CMakeLists.txt  CMakePresets.json  LICENSE  LICENSE.MIT  README.md
OpenCLMocker/: CMakeLists.txt
OpenCLMocker/include/CL/: cl.h
OpenCLMocker/src/: API.cpp  APIEnums.cpp  Buffer.cpp  Config.cpp  Device.cpp  Environment.cpp  Event.cpp  Kernel.cpp  Platform.cpp  Queue.cpp  Retainable.cpp
OpenCLMocker/src/include/OpenCLMocker/: Buffer.hpp  BufferType.hpp  Config.hpp  Context.hpp  Device.hpp  Enums.hpp  Environment.hpp  Event.hpp  Exception.hpp  ForbidCopy.hpp  Kernel.hpp  MapToCl.hpp  MemFlags.hpp  Object.hpp  Platform.hpp  Program.hpp  Queue.hpp  Retainable.hpp  TypeValidation.hpp
Test/: CMakeLists.txt  Test.cpp
